# wizwtr

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  pyproject.toml  requirements.txt  wizwtr
services/: wizwtr.service  wizwtr.trend.day.service  wizwtr.trend.day.timer  wizwtr.trend.month.service  wizwtr.trend.month.timer  wizwtr.trend.year.service  wizwtr.trend.year.timer
src/: constants.py  include.sh  libwizwtr.py  pastday.sh  pastmonth.sh  pastyear.sh  test-wizwtr.py  trend.py  wizwtr.py
src/libzeroconf/: __init__.py  discover.py
www/: index.html
